Ensure case view table overflows with scrollbar

--- a/caseworker/assets/styles/components/_cases.scss
+++ b/caseworker/assets/styles/components/_cases.scss
@@ -600,3 +600,7 @@ $case-header-text-colour: govuk-colour('white');
     overflow: hidden;
   }
 }
+
+.case-table-container {
+    overflow-x: scroll;
+}
